{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 27,
  "lineage": "648c85d5-f46a-1119-2339-ab8bdbc6b330",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d749c22d5bdc8101",
            "association_id": "eipassoc-0ff4a57e67dbf0d2d",
            "domain": "vpc",
            "id": "eipalloc-0d749c22d5bdc8101",
            "network_border_group": "us-east-1",
            "network_interface": "eni-086c9a3c4e447ee44",
            "private_dns": "ip-10-0-10-92.ec2.internal",
            "private_ip": "10.0.10.92",
            "public_dns": "ec2-50-17-13-81.compute-1.amazonaws.com",
            "public_ip": "50.17.13.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-MyElastic-A"
            },
            "tags_all": {
              "Name": "development-MyElastic-A"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d07a28e53ee2bfb",
            "association_id": "eipassoc-08fc9fe8da882a036",
            "domain": "vpc",
            "id": "eipalloc-08d07a28e53ee2bfb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06382734362f3b2d2",
            "private_dns": "ip-10-0-20-105.ec2.internal",
            "private_ip": "10.0.20.105",
            "public_dns": "ec2-3-209-144-105.compute-1.amazonaws.com",
            "public_ip": "3.209.144.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-MyElastic-B"
            },
            "tags_all": {
              "Name": "development-MyElastic-B"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:internet-gateway/igw-049ed3d01a9b99d53",
            "id": "igw-049ed3d01a9b99d53",
            "owner_id": "381491829424",
            "tags": {
              "Name": "development"
            },
            "tags_all": {
              "Name": "development"
            },
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d749c22d5bdc8101",
            "association_id": "eipassoc-0ff4a57e67dbf0d2d",
            "connectivity_type": "public",
            "id": "nat-06a43f1e780a34284",
            "network_interface_id": "eni-086c9a3c4e447ee44",
            "private_ip": "10.0.10.92",
            "public_ip": "50.17.13.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b43ec7e794327276",
            "tags": {
              "Name": "development-Nat-gateway-A"
            },
            "tags_all": {
              "Name": "development-Nat-gateway-A"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d07a28e53ee2bfb",
            "association_id": "eipassoc-08fc9fe8da882a036",
            "connectivity_type": "public",
            "id": "nat-0128407a3f8a24580",
            "network_interface_id": "eni-06382734362f3b2d2",
            "private_ip": "10.0.20.105",
            "public_ip": "3.209.144.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027b01be8ade248aa",
            "tags": {
              "Name": "development-Nat-gateway-B"
            },
            "tags_all": {
              "Name": "development-Nat-gateway-B"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf6470d358a4b8521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06a43f1e780a34284",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf6470d358a4b852",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_a",
            "aws_nat_gateway.nat_gateway_a",
            "aws_route_table.private_route_table_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e07026d222f94251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0128407a3f8a24580",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e07026d222f9425",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_b",
            "aws_nat_gateway.nat_gateway_b",
            "aws_route_table.private_route_table_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:route-table/rtb-0c52a0d96d2ef2066",
            "id": "rtb-0c52a0d96d2ef2066",
            "owner_id": "381491829424",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Staging",
              "Name": "database_route_table"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "database_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:route-table/rtb-0bf6470d358a4b852",
            "id": "rtb-0bf6470d358a4b852",
            "owner_id": "381491829424",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a43f1e780a34284",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "private_route_table_A"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "private_route_table_A"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:route-table/rtb-03e07026d222f9425",
            "id": "rtb-03e07026d222f9425",
            "owner_id": "381491829424",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0128407a3f8a24580",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Staging",
              "Name": "private_route_table_B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "private_route_table_B"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:route-table/rtb-0d4fe355a45244739",
            "id": "rtb-0d4fe355a45244739",
            "owner_id": "381491829424",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "public_route_table"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a16d84b59654ceb1",
            "route_table_id": "rtb-0c52a0d96d2ef2066",
            "subnet_id": "subnet-066c0e3ee378a1a2a"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb7c8070343b6b7a",
            "route_table_id": "rtb-0c52a0d96d2ef2066",
            "subnet_id": "subnet-0ad0d9a28cdd2699b"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034375df244806094",
            "route_table_id": "rtb-0bf6470d358a4b852",
            "subnet_id": "subnet-05be4ae11280eae56"
          },
          "dependencies": [
            "aws_route_table.private_route_table_a",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0145adfa5f7cb0ef9",
            "route_table_id": "rtb-03e07026d222f9425",
            "subnet_id": "subnet-0a7316fef243fc8ba"
          },
          "dependencies": [
            "aws_route_table.private_route_table_b",
            "aws_subnet.private_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0276a700d922896fa",
            "route_table_id": "rtb-0d4fe355a45244739",
            "subnet_id": "subnet-0b43ec7e794327276"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0585f0e67c16e2bd0",
            "route_table_id": "rtb-0d4fe355a45244739",
            "subnet_id": "subnet-027b01be8ade248aa"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_mew_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:security-group/sg-08cc06e46b548dea1",
            "description": "Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cc06e46b548dea1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_vpc_new",
            "name_prefix": "",
            "owner_id": "381491829424",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security group new vpc"
            },
            "tags_all": {
              "Name": "Security group new vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:subnet/subnet-066c0e3ee378a1a2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066c0e3ee378a1a2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491829424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-Database-A"
            },
            "tags_all": {
              "Name": "development-Database-A"
            },
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:subnet/subnet-0ad0d9a28cdd2699b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad0d9a28cdd2699b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491829424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-Database-B"
            },
            "tags_all": {
              "Name": "development-Database-B"
            },
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:subnet/subnet-05be4ae11280eae56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05be4ae11280eae56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491829424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-Private-A",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "development-Private-A",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:subnet/subnet-0a7316fef243fc8ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7316fef243fc8ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491829424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-Private-B",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "development-Private-B",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:subnet/subnet-0b43ec7e794327276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b43ec7e794327276",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491829424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-Public-A",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "development-Public-A",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:subnet/subnet-027b01be8ade248aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027b01be8ade248aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491829424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-Public-B",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "development-Public-B",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08bb1284e18434953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491829424:vpc/vpc-08bb1284e18434953",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd2f8fb25ab7914f",
            "default_route_table_id": "rtb-0425bc80eb2a3e5d1",
            "default_security_group_id": "sg-0fb2f3fc32d439027",
            "dhcp_options_id": "dopt-0ef42710d9bca152b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bb1284e18434953",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0425bc80eb2a3e5d1",
            "owner_id": "381491829424",
            "tags": {
              "Name": "development"
            },
            "tags_all": {
              "Name": "development"
            }
          }
        }
      ]
    }
  ]
}